# autonomy_leds

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  package.xml
autonomy_leds/: CMakeLists.txt  package.xml
autonomy_leds_avr/: CMakeLists.txt  README  README.md  package.xml
autonomy_leds_avr/firmware/: Makefile
autonomy_leds_avr/firmware/include/: apa102_config.h
autonomy_leds_avr/firmware/src/: Descriptors.c  leds_firmware.cpp
autonomy_leds_avr/scripts/: flash.sh  test.py
autonomy_leds_msgs/: CMakeLists.txt  package.xml
autonomy_leds_msgs/msg/: Animation.msg  BGRAInt8.msg  BGRAVector.msg  BGRInt8.msg  BGRVector.msg  Command.msg  Directional.msg  Keyframe.msg  LED.msg  RGBAVector.msg
autonomy_leds_tools/: CMakeLists.txt  package.xml
autonomy_leds_tools/include/autonomy_leds_tools/: animation_engine.h  bebop_api.h
autonomy_leds_tools/launch/: bebop.launch  engine.launch
autonomy_leds_tools/scripts/: flash.sh  test.py  test_anim.py  test_lidar_led.py
autonomy_leds_tools/src/: animation_engine.cpp  animation_engine_node.cpp  bebop_api.cpp
autonomy_leds_tools/udev/: 52-led-strip.rules  README.md
firmware/: Makefile
firmware/src/: Descriptors.c  leds_firmware.cpp
scripts/: flash.sh
udev/: 52-led-strip.rules  README.md
