<?xml version="1.0"?>
<package>
  <name>autonomy_leds</name>
  <version>0.1.0</version>
  <description>Metapackage for autonomy_leds</description>
  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>BSD</license>
  <url type="website">http://autonomylab.org/autonomy_leds</url>
  <url type="repository">https://github.com/AutonomyLab/autonomy_leds</url>
  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage /> 
  </export>
</package>
