<?xml version="1.0"?>
<package>
  <name>autonomy_leds_msgs</name>
  <version>0.1.0</version>
  <description>Message and Service definitions for autonomy_leds</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>

  <license>BSD</license>


  <url type="website">http://autonomylab.org/autonomy_leds</url>
  <url type="repository">https://github.com/AutonomyLab/autonomy_leds</url>

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
