<?xml version="1.0"?>
<package>
  <name>autonomy_leds_tools</name>
  <version>0.1.0</version>
  <description>High level tools and interface for autonomy_leds</description>
  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>BSD</license>
  <url type="website">http://autonomylab.org/autonomy_leds</url>
  <url type="repository">https://github.com/AutonomyLab/autonomy_leds</url>

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autonomy_leds_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>autonomy_leds_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
